--- a/exercise 3/marvel-api/src/assets/base.css
+++ b/exercise 3/marvel-api/src/assets/base.css
@@ -82,9 +82,13 @@ body::-webkit-scrollbar-thumb {
     border-radius: 4px;
 }
 
-svg{
+svg {
     height: 100%;
 }
-.container {
-    margin: 0 15px;
+
+button:hover{
+    cursor: pointer;
 }
+/* .container {
+    margin: 0 15px;
+} */
